--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,9 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # vertical and horizontal symbols to split the screen
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h '#{pane_current_path}'
+bind - split-window -v '#{pane_current_path}'
+
 
 # navigate between panes
 bind h select-pane -L
