made the pane open with same directory

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,8 +18,8 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # vertical and horizontal symbols to split the screen
-bind | split-window -h '#{pane_current_path}'
-bind - split-window -v '#{pane_current_path}'
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 
 # navigate between panes
