--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 # set Zsh as default tmux shell
 set-option -g default-shell /bin/zsh
 
+# reattaches zsh to user namespace fixing issues with certain commands being run in tmux
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 set -g default-terminal "screen-256color"
 
 # Tmux control key to Ctrl-a instead of Ctrl-b, easier to reach
