--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set-option -g default-shell /bin/zsh
 
 # reattaches zsh to user namespace fixing issues with certain commands being run in tmux
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set -g default-terminal "screen-256color"
 
@@ -24,7 +24,6 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
-
 # navigate between panes
 bind h select-pane -L
 bind j select-pane -D
@@ -36,4 +35,3 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
-
